v0.5.1-SNAPSHOT:
  date: 2015-02-09
  changes:
    - fixed overview.md paths
    - added possibility to overwrite connect rewrite rules in the project gruntfile
v0.5.0:
  date: 2015-02-04
  changes:
    - added e2e and unittest tasks, uglify, small fixes
    - add optional targets for clean, copy and processHtml
    - fix: copy font files, not only directories
    - changed package.json dependency format to comply with our node style guide
v0.4.0:
  date: 2015-02-04
  changes:
    - added serve, build, devbliss-cssmin, default
    - added devbliss-clean, devbliss-rev, devbliss-processhtml
    - added devbliss-htmlmin, devbliss-usemin, devbliss-useminPrepare
v0.3.4:
  date: 2015-01-28 
  changes:
    - added devbliss-recess, devbliss-concat, devbliss-copy, devbliss-jshint
    - added devbliss-watch
    - refactored into modules
v0.3.3:
  date: 2015-01-19
  changes:
    - update documentation
v0.3.2:
  date: 2015-01-15
  changes:
    - fix configuration for proxies and rewrite rules
v0.3.1:
  date: 2015-01-15
  changes:
    - move grunt dependencies form dev to normal
v0.3.0:
  date: 2015-01-15
  changes:
    - add devbliss-connect task 
v0.2.0:
  date: 2015-01-14
  changes:
    - add devbliss-wiredep task
    - remove IDE specific files
v0.1.1:
  date: 2014-12-19
  changes:
    - fix plugin description
v0.1.0:
 date: 2014-12-18
 changes:
   - initial setup